# internal/handler/http/request/request.go
@@ -1,1 +1,9 @@
 package request
+
+type CreateCustomer struct {
+	Email string `json:"email"`
+}
+
+type SubscribeCustomer struct {
+	Plan string `json:"plan"`
+}
