# internal/handler/http/response/error.go
@@ -1,1 +1,6 @@
-package ressponse
+package response
+
+type ErrorResponse struct {
+	Code    int    `json:"code"`
+	Message string `json:"message"`
+}
